# CopsAndRobbersRL

./: .env-example  .gitignore  README.md  pyproject.toml
.github/workflows/: quality.yml
assets/gui/: README.md
config/: default_game.yaml  gmail.yaml  mcp.yaml
docs/: BONUS_PLAN.md  COST_AND_RESOURCES.md  FINAL_AUDIT.md  PLAN.md  PRD.md  PRD_game_environment.md  PRD_gmail_reporting.md  PRD_marl_algorithm.md  PRD_mcp_communication.md  PROMPT_LOG.md  QMIX_EXTENSION.md  SUMMARY_REPORT.md  TEACHER_EVIDENCE.md  TODO.md
scripts/: capture_cli_evidence.ps1  capture_gui.ps1
src/cops_and_robbers_rl/: __init__.py  __main__.py  main.py
src/cops_and_robbers_rl/agents/: __init__.py  base_agent.py  heuristic_cop.py  heuristic_thief.py  local_policy.py  random_agents.py
src/cops_and_robbers_rl/environment/: __init__.py  actions.py  game_state.py  grid.py  observations.py  rules.py  scoring.py  transitions.py
src/cops_and_robbers_rl/gui/: __init__.py  app.py  theme.py
src/cops_and_robbers_rl/marl/: __init__.py  iql.py  metrics.py  replay_buffer.py  trainer.py
src/cops_and_robbers_rl/mcp/: __init__.py  config.py  cop_server.py  gatekeeper.py  schemas.py  server.py  smoke.py  thief_server.py
src/cops_and_robbers_rl/reporting/: __init__.py  gmail.py
src/cops_and_robbers_rl/runner/: __init__.py  match_runner.py
src/cops_and_robbers_rl/sdk/: __init__.py  sdk.py  (+1 more)
tests/: test_agents.py  test_config.py  test_engine.py  test_grid.py  test_interactive_session.py  test_marl_iql.py  test_match_runner.py  test_mcp_local.py  test_reporting.py  test_scoring.py  test_sdk.py
(+4 files in other folders)
