[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cops-and-robbers-rl"
version = "1.0.0"
description = "Deterministic cops-and-robbers grid engine for MARL experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.2,<7",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.27,<2",
]
dev = [
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.11,<1",
]

[project.scripts]
cops-and-robbers = "cops_and_robbers_rl.main:main"
cops-mcp-cop = "cops_and_robbers_rl.mcp.cop_server:main"
cops-mcp-thief = "cops_and_robbers_rl.mcp.thief_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cops_and_robbers_rl"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.coverage.run]
source = ["cops_and_robbers_rl"]

[tool.coverage.report]
show_missing = true
fail_under = 85
